Fixed Pictures align

--- a/src/components/detail/detail.css
+++ b/src/components/detail/detail.css
@@ -43,16 +43,38 @@
                 display: flex;
                 flex-direction: column;
                 gap: 20px;
+                margin-top: 20px;
 
                 .photoItem{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
 
                     .photoDetail{
+                        display: flex;
+                        align-items: center;
+                        gap: 20px;
                         img{
                             width: 40px;
                             height: 40px;
                             border-radius: 5px;
                             object-fit: cover;
                         }
+
+                        span{
+                            font-size: 14px;
+                            color: lightgrey;
+                            font-weight: 300;
+                        }
+                    }
+
+                    .icon{
+                        width: 30px;
+                        height: 30px;
+                        background-color: rgba(17, 25, 40, 0.3);
+                        padding: 10px;
+                        border-radius: 50%;
+                        cursor: pointer;
                     }
                 }
             }
